--- a/index.ipynb
+++ b/index.ipynb
@@ -702,7 +702,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
-    "        cost__curve_slope = slope_at(x_values, y_values, current_m, b) ['slope']\n",
+    "        cost__cslope = slope_at(x_values, y_values, current_m, b) ['slope']\n",
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        cost_curve.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
     "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
