--- a/index.ipynb
+++ b/index.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b) ['slope']\n",
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        cost_curve.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
-    "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
+    "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
     "    pass"
    ]
   },
