--- a/index.ipynb
+++ b/index.ipynb
@@ -873,9 +873,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "0c803dca-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          275,
+          300,
+          700
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0",
+         "type": "scatter",
+         "uid": "0c803fa0-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          133.33,
+          133.33,
+          133.33
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0.55",
+         "type": "scatter",
+         "uid": "0c8040d6-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          188.16169999998064,
+          242.99339999996124,
+          352.6567999999225
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0.87",
+         "type": "scatter",
+         "uid": "0c8041f8-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          219.96408600000547,
+          306.59817200001095,
+          479.86634400002185
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.05",
+         "type": "scatter",
+         "uid": "0c804324-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          238.40946988004552,
+          343.48893976009106,
+          553.6478795201821
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.16",
+         "type": "scatter",
+         "uid": "0c80457c-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          249.1077925304181,
+          364.8855850608362,
+          596.4411701216724
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.22",
+         "type": "scatter",
+         "uid": "0c8046a8-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          255.312819667639,
+          377.295639335278,
+          621.261278670556
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.26",
+         "type": "scatter",
+         "uid": "0c8047d4-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          258.9117354072278,
+          384.49347081445563,
+          635.6569416289112
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.28",
+         "type": "scatter",
+         "uid": "0c8048f6-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          260.9991065361975,
+          388.6682130723949,
+          644.0064261447898
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.29",
+         "type": "scatter",
+         "uid": "0c804a18-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          262.2097817909945,
+          391.08956358198895,
+          648.8491271639779
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.3",
+         "type": "scatter",
+         "uid": "0c804b3a-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          262.91197343877695,
+          392.49394687755387,
+          651.6578937551077
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.3",
+         "type": "scatter",
+         "uid": "0c804c5c-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          263.31924459448976,
+          393.3084891889795,
+          653.2869783779589
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.3",
+         "type": "scatter",
+         "uid": "0c804d74-ad78-11e9-bf47-21411607b06c",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          263.5554618648021,
+          393.7809237296042,
+          654.2318474592084
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"abfe5d3f-355b-479c-9399-aa59b6156725\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"abfe5d3f-355b-479c-9399-aa59b6156725\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"0c901bf0-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0\", \"x\": [100, 200, 400], \"y\": [133.33, 133.33, 133.33], \"type\": \"scatter\", \"uid\": \"0c901dbc-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0.55\", \"x\": [100, 200, 400], \"y\": [188.16169999998064, 242.99339999996124, 352.6567999999225], \"type\": \"scatter\", \"uid\": \"0c901f10-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0.87\", \"x\": [100, 200, 400], \"y\": [219.96408600000547, 306.59817200001095, 479.86634400002185], \"type\": \"scatter\", \"uid\": \"0c902028-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.05\", \"x\": [100, 200, 400], \"y\": [238.40946988004552, 343.48893976009106, 553.6478795201821], \"type\": \"scatter\", \"uid\": \"0c9021c2-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.16\", \"x\": [100, 200, 400], \"y\": [249.1077925304181, 364.8855850608362, 596.4411701216724], \"type\": \"scatter\", \"uid\": \"0c90233e-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.22\", \"x\": [100, 200, 400], \"y\": [255.312819667639, 377.295639335278, 621.261278670556], \"type\": \"scatter\", \"uid\": \"0c902438-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.26\", \"x\": [100, 200, 400], \"y\": [258.9117354072278, 384.49347081445563, 635.6569416289112], \"type\": \"scatter\", \"uid\": \"0c902532-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.28\", \"x\": [100, 200, 400], \"y\": [260.9991065361975, 388.6682130723949, 644.0064261447898], \"type\": \"scatter\", \"uid\": \"0c90262c-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.29\", \"x\": [100, 200, 400], \"y\": [262.2097817909945, 391.08956358198895, 648.8491271639779], \"type\": \"scatter\", \"uid\": \"0c9027d0-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [262.91197343877695, 392.49394687755387, 651.6578937551077], \"type\": \"scatter\", \"uid\": \"0c90294c-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [263.31924459448976, 393.3084891889795, 653.2869783779589], \"type\": \"scatter\", \"uid\": \"0c902a64-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [263.5554618648021, 393.7809237296042, 654.2318474592084], \"type\": \"scatter\", \"uid\": \"0c902b5e-ad78-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"abfe5d3f-355b-479c-9399-aa59b6156725\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"abfe5d3f-355b-479c-9399-aa59b6156725\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"0c901bf0-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0\", \"x\": [100, 200, 400], \"y\": [133.33, 133.33, 133.33], \"type\": \"scatter\", \"uid\": \"0c901dbc-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0.55\", \"x\": [100, 200, 400], \"y\": [188.16169999998064, 242.99339999996124, 352.6567999999225], \"type\": \"scatter\", \"uid\": \"0c901f10-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:0.87\", \"x\": [100, 200, 400], \"y\": [219.96408600000547, 306.59817200001095, 479.86634400002185], \"type\": \"scatter\", \"uid\": \"0c902028-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.05\", \"x\": [100, 200, 400], \"y\": [238.40946988004552, 343.48893976009106, 553.6478795201821], \"type\": \"scatter\", \"uid\": \"0c9021c2-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.16\", \"x\": [100, 200, 400], \"y\": [249.1077925304181, 364.8855850608362, 596.4411701216724], \"type\": \"scatter\", \"uid\": \"0c90233e-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.22\", \"x\": [100, 200, 400], \"y\": [255.312819667639, 377.295639335278, 621.261278670556], \"type\": \"scatter\", \"uid\": \"0c902438-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.26\", \"x\": [100, 200, 400], \"y\": [258.9117354072278, 384.49347081445563, 635.6569416289112], \"type\": \"scatter\", \"uid\": \"0c902532-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.28\", \"x\": [100, 200, 400], \"y\": [260.9991065361975, 388.6682130723949, 644.0064261447898], \"type\": \"scatter\", \"uid\": \"0c90262c-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.29\", \"x\": [100, 200, 400], \"y\": [262.2097817909945, 391.08956358198895, 648.8491271639779], \"type\": \"scatter\", \"uid\": \"0c9027d0-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [262.91197343877695, 392.49394687755387, 651.6578937551077], \"type\": \"scatter\", \"uid\": \"0c90294c-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [263.31924459448976, 393.3084891889795, 653.2869783779589], \"type\": \"scatter\", \"uid\": \"0c902a64-ad78-11e9-bf47-21411607b06c\"}, {\"mode\": \"lines\", \"name\": \"m:1.3\", \"x\": [100, 200, 400], \"y\": [263.5554618648021, 393.7809237296042, 654.2318474592084], \"type\": \"scatter\", \"uid\": \"0c902b5e-ad78-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from plotly.offline import iplot, init_notebook_mode\n",
     "from graph import plot, m_b_trace\n",
